@@ -1,5 +1,10 @@
 $Id$
 
+2017-02-20  Christian Franke  <franke@computer.org>
+
+	os_win32.cpp: Rework CSMI port mapping.  This fixes access to
+	ports != 0 behind IRST driver 15.2 (ticket #804).
+
 2017-01-30  Alex Samorukov  <samm@os2.kiev.ua>
 
 	os_freebsd.cpp: unblock 48bit ATACAM commands for the legacy controllers
